# fabric-bi-end2end

./: .gitignore  AGENTS.md  CODEOWNERS  README.md  SETUP.md  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md  pull_request_template.md
.github/instructions/: README.md  scripts.instructions.md
.github/workflows/: ci.yml  fabric-deploy.yml  sync-wiki.yml  terraform.yml
docs/: microsoft-fabric-api-reference.md
scripts/: __init__.py  check_unmapped_ids.py  deploy_to_fabric.py
scripts/common/: logger.py
scripts/fabric/: auth.py  config.py  reporting.py  types.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars  test.tfvars
tests/: __init__.py  conftest.py  test_deploy_to_fabric.py  test_deploy_to_fabric_extended.py  test_deployment_config.py  test_logger.py
wiki/: Deployment-Workflow.md  FAQ.md  Fabric-CICD-Options-Comparison.md  Home.md  Setup-Guide.md  Troubleshooting.md  Workspace-Configuration.md  _Footer.md  _Sidebar.md
workspaces/Fabric BI End2End/: config.yml  parameter.yml
workspaces/Fabric BI End2End/1_Bronze/ingestion/cp_import_dim_city.CopyJob/: .platform  copyjob-content.json
workspaces/Fabric BI End2End/1_Bronze/ingestion/cp_import_dim_customer.CopyJob/: .platform  copyjob-content.json
workspaces/Fabric BI End2End/1_Bronze/pl_ingest_bronze_data.DataPipeline/: .platform  pipeline-content.json
workspaces/Fabric BI End2End/3_Gold/WideWorldImporters.SemanticModel/: .platform  WideWorldImporters-Model-Documentation.md
workspaces/Fabric BI End2End/3_Gold/lakehouse_gold.Lakehouse/: shortcuts.metadata.json
workspaces/Fabric BI End2End/parameter_templates/: lh_parameters.yml  nb_parameters.yml  pl_parameters.yml
workspaces/Fabric Blueprint/parameter_templates/: cp_parameters.yml
(+21 files in other folders)
